core/api/mblink.h

// ========== 类型定义 ==========

typedef struct MBlinkWindow* MBlinkHandle;
typedef enum {
    MBLINK_TYPE_NULL = 0,
    MBLINK_TYPE_BOOL = 1,
    MBLINK_TYPE_INT = 2,
    MBLINK_TYPE_DOUBLE = 3,
    MBLINK_TYPE_STRING = 4,
    MBLINK_TYPE_ARRAY = 5,
    MBLINK_TYPE_OBJECT = 6
} MBlinkType;
// 状态变更回调
typedef void (*MBlinkStateCallback)(const char* name, const char* value_json,
                                     void* user_data);
// ========== 状态查询 ==========

MBLINK_API bool mblink_state_exists(MBlinkHandle handle, const char* name);
MBLINK_API MBlinkType mblink_state_type(MBlinkHandle handle,
                                           const char* name);
MBLINK_API void mblink_state_delete(MBlinkHandle handle, const char* name);
// ========== 状态读取（直接类型，无需 free） ==========

MBLINK_API bool mblink_state_get_bool(MBlinkHandle handle, const char* name);
MBLINK_API int64_t mblink_state_get_int(MBlinkHandle handle,
                                          const char* name);
MBLINK_API double mblink_state_get_double(MBlinkHandle handle,
                                            const char* name);
MBLINK_API const char* mblink_state_get_string(MBlinkHandle handle,
                                                 const char* name);
MBLINK_API int mblink_state_get_length(MBlinkHandle handle,
                                         const char* name);
// ========== 状态读取（JSON，需要 free） ==========

MBLINK_API char* mblink_state_get_json(MBlinkHandle handle,
                                         const char* name);
MBLINK_API char* mblink_state_get_at(MBlinkHandle handle, const char* name,
                                       int index);
MBLINK_API char* mblink_state_get_key(MBlinkHandle handle, const char* name,
                                        const char* key);
// ========== 状态写入（直接类型，线程安全） ==========

MBLINK_API int mblink_state_set_null(MBlinkHandle handle, const char* name);
MBLINK_API int mblink_state_set_bool(MBlinkHandle handle, const char* name,
                                       bool value);
MBLINK_API int mblink_state_set_int(MBlinkHandle handle, const char* name,
                                      int64_t value);
MBLINK_API int mblink_state_set_double(MBlinkHandle handle, const char* name,
                                         double value);
MBLINK_API int mblink_state_set_string(MBlinkHandle handle, const char* name,
                                         const char* value);
MBLINK_API int mblink_state_set_json(MBlinkHandle handle, const char* name,
                                       const char* json);
// ========== 数组操作（线程安全） ==========

MBLINK_API int mblink_state_array_push(MBlinkHandle handle, const char* name,
                                         const char* item_json);
MBLINK_API int mblink_state_array_push_int(MBlinkHandle handle,
                                             const char* name, int64_t value);
MBLINK_API int mblink_state_array_push_double(MBlinkHandle handle,
                                                const char* name, double value);
MBLINK_API int mblink_state_array_push_string(MBlinkHandle handle,
                                                const char* name,
                                                const char* value);
MBLINK_API int mblink_state_array_push_bool(MBlinkHandle handle,
                                              const char* name, bool value);
MBLINK_API int mblink_state_array_pop(MBlinkHandle handle, const char* name);
MBLINK_API int mblink_state_array_shift(MBlinkHandle handle,
                                          const char* name);
MBLINK_API int mblink_state_array_unshift(MBlinkHandle handle,
                                            const char* name,
                                            const char* item_json);
MBLINK_API int mblink_state_array_remove(MBlinkHandle handle,
                                           const char* name, int index);
MBLINK_API int mblink_state_array_clear(MBlinkHandle handle,
                                          const char* name);
MBLINK_API int mblink_state_array_set(MBlinkHandle handle, const char* name,
                                        int index, const char* item_json);
MBLINK_API int mblink_state_array_set_int(MBlinkHandle handle,
                                            const char* name, int index,
                                            int64_t value);
MBLINK_API int mblink_state_array_set_double(MBlinkHandle handle,
                                               const char* name, int index,
                                               double value);
MBLINK_API int mblink_state_array_set_string(MBlinkHandle handle,
                                               const char* name, int index,
                                               const char* value);
// ========== 对象操作（线程安全） ==========

MBLINK_API int mblink_state_object_set(MBlinkHandle handle, const char* name,
                                         const char* key,
                                         const char* value_json);
MBLINK_API int mblink_state_object_set_int(MBlinkHandle handle,
                                             const char* name, const char* key,
                                             int64_t value);
MBLINK_API int mblink_state_object_set_double(MBlinkHandle handle,
                                                const char* name,
                                                const char* key, double value);
MBLINK_API int mblink_state_object_set_string(MBlinkHandle handle,
                                                const char* name,
                                                const char* key,
                                                const char* value);
MBLINK_API int mblink_state_object_set_bool(MBlinkHandle handle,
                                              const char* name, const char* key,
                                              bool value);
MBLINK_API int mblink_state_object_remove(MBlinkHandle handle,
                                            const char* name, const char* key);
MBLINK_API int mblink_state_object_clear(MBlinkHandle handle,
                                           const char* name);
// ========== 数值操作（线程安全，原子） ==========

MBLINK_API int mblink_state_increment(MBlinkHandle handle, const char* name,
                                        double delta);
MBLINK_API int mblink_state_multiply(MBlinkHandle handle, const char* name,
                                       double factor);
// ========== 字符串操作（线程安全） ==========

MBLINK_API int mblink_state_string_append(MBlinkHandle handle,
                                            const char* name,
                                            const char* suffix);
MBLINK_API int mblink_state_string_prepend(MBlinkHandle handle,
                                             const char* name,
                                             const char* prefix);
// ========== 监听 ==========

MBLINK_API int mblink_state_watch(MBlinkHandle handle, const char* name,
                                    MBlinkStateCallback callback,
                                    void* user_data);
MBLINK_API void mblink_state_unwatch(MBlinkHandle handle, int watch_id);
// ========== 批量操作 ==========

MBLINK_API void mblink_state_batch_begin(MBlinkHandle handle);
MBLINK_API void mblink_state_batch_end(MBlinkHandle handle);
// ========== 队列控制 ==========

MBLINK_API void mblink_state_set_merge_mode(MBlinkHandle handle,
                                              bool enable);
MBLINK_API int mblink_process_queue(MBlinkHandle handle);
MBLINK_API int mblink_queue_size(MBlinkHandle handle);
// ========== 共享 C 对象 (SharedObject) ==========
//
// 核心思想：Python/JS 共享同一个 QuickJS JSValue 对象。
// - Python 通过 ctypes 调用 set/get 操作同一个 C 对象
// - JS 通过 globalThis.<name> 直接读写同一个对象
// - Python 写入后自动触发 JS 内部 shared update 调度 → UI 刷新
//
// 用法：
//   Python: data = app.shared("data"); data.count = 0
//   JS:     data.count  →  0
//           py.increment()  →  Python: data.count += 1  →  UI 自动更新

// 不透明句柄
typedef struct MBlinkSharedObject* MBlinkSharedHandle;
typedef struct MBlinkLogViewObject* MBlinkLogViewHandle;
typedef struct MBlinkTerminalObject* MBlinkTerminalHandle;
// 创建共享对象，注册为 JS globalThis.<name>
MBLINK_API MBlinkSharedHandle mblink_shared_create(MBlinkHandle handle,
                                                       const char* name);
// 销毁共享对象
MBLINK_API void mblink_shared_destroy(MBlinkSharedHandle shared);
// ---- 类型化 setter（自动触发内部 shared update 调度） ----

MBLINK_API int mblink_shared_set_int(MBlinkSharedHandle shared,
                                        const char* key, int64_t value);
MBLINK_API int mblink_shared_set_double(MBlinkSharedHandle shared,
                                           const char* key, double value);
MBLINK_API int mblink_shared_set_string(MBlinkSharedHandle shared,
                                           const char* key, const char* value);
MBLINK_API int mblink_shared_set_bool(MBlinkSharedHandle shared,
                                         const char* key, bool value);
MBLINK_API int mblink_shared_set_null(MBlinkSharedHandle shared,
                                         const char* key);
MBLINK_API int mblink_shared_set_json(MBlinkSharedHandle shared,
                                         const char* key, const char* json_str);
// ---- 类型化 getter ----

MBLINK_API int64_t mblink_shared_get_int(MBlinkSharedHandle shared,
                                            const char* key);
MBLINK_API double mblink_shared_get_double(MBlinkSharedHandle shared,
                                              const char* key);
// 返回值由调用者通过 mblink_free() 释放
MBLINK_API const char* mblink_shared_get_string(MBlinkSharedHandle shared,
                                                    const char* key);
MBLINK_API bool mblink_shared_get_bool(MBlinkSharedHandle shared,
                                          const char* key);
// 返回 JSON 字符串，调用者通过 mblink_free() 释放
MBLINK_API const char* mblink_shared_get_json(MBlinkSharedHandle shared,
                                                  const char* key);
// ---- 属性查询 ----

MBLINK_API int mblink_shared_get_type(MBlinkSharedHandle shared,
                                         const char* key);
MBLINK_API int mblink_shared_delete(MBlinkSharedHandle shared,
                                       const char* key);
MBLINK_API bool mblink_shared_has(MBlinkSharedHandle shared,
                                     const char* key);
// ---- 批量更新（抑制中间 shared update 调用） ----

MBLINK_API void mblink_shared_batch_begin(MBlinkSharedHandle shared);
MBLINK_API void mblink_shared_batch_end(MBlinkSharedHandle shared);
// ========== 原生 UI 对象句柄（LogView / Terminal） ==========

MBLINK_API MBlinkLogViewHandle mblink_logview_get(MBlinkHandle handle,
                                                    const char* element_id);
MBLINK_API void mblink_logview_destroy(MBlinkLogViewHandle logview);
MBLINK_API int mblink_logview_append(MBlinkLogViewHandle logview,
                                        const char* level,
                                        const char* source,
                                        const char* message);
MBLINK_API void mblink_logview_clear(MBlinkLogViewHandle logview);
MBLINK_API const char* mblink_logview_export(MBlinkLogViewHandle logview,
                                                const char* format);
MBLINK_API MBlinkTerminalHandle mblink_terminal_get(MBlinkHandle handle,
                                                      const char* element_id);
MBLINK_API void mblink_terminal_destroy(MBlinkTerminalHandle terminal);
MBLINK_API int mblink_terminal_write(MBlinkTerminalHandle terminal,
                                        const char* data);
MBLINK_API void mblink_terminal_clear(MBlinkTerminalHandle terminal);
MBLINK_API int mblink_terminal_execute(MBlinkTerminalHandle terminal,
                                          const char* command);
MBLINK_API int mblink_terminal_start_shell(MBlinkTerminalHandle terminal,
                                              const char* shell);
MBLINK_API int mblink_terminal_send_input(MBlinkTerminalHandle terminal,
                                             const char* input);
MBLINK_API void mblink_terminal_resize(MBlinkTerminalHandle terminal,
                                          int rows, int cols);
MBLINK_API const char* mblink_terminal_serialize(MBlinkTerminalHandle terminal);
// ========== 工具函数 ==========

// 拷贝字符串到 MBlink 运行时分配的内存；调用者需通过 mblink_free() 释放
MBLINK_API char* mblink_copy_string(const char* str);
MBLINK_API void mblink_free(void* ptr);