bindings/rust/mblink-sys/src/lib.rs


    pub fn mblink_state_exists(handle: MBlinkHandle, name: *const c_char) -> bool;
    pub fn mblink_state_type(handle: MBlinkHandle, name: *const c_char) -> MBlinkType;
    pub fn mblink_state_delete(handle: MBlinkHandle, name: *const c_char);
    pub fn mblink_state_get_bool(handle: MBlinkHandle, name: *const c_char) -> bool;
    pub fn mblink_state_get_int(handle: MBlinkHandle, name: *const c_char) -> i64;
    pub fn mblink_state_get_double(handle: MBlinkHandle, name: *const c_char) -> f64;
    pub fn mblink_state_get_string(handle: MBlinkHandle, name: *const c_char) -> *const c_char;
    pub fn mblink_state_get_length(handle: MBlinkHandle, name: *const c_char) -> c_int;
    pub fn mblink_state_get_json(handle: MBlinkHandle, name: *const c_char) -> *mut c_char;
    pub fn mblink_state_get_at(
        handle: MBlinkHandle,
        name: *const c_char,
        index: c_int,
    ) -> *mut c_char;
    pub fn mblink_state_get_key(
        handle: MBlinkHandle,
        name: *const c_char,
        key: *const c_char,
    ) -> *mut c_char;
    pub fn mblink_state_set_null(handle: MBlinkHandle, name: *const c_char) -> c_int;
    pub fn mblink_state_set_bool(handle: MBlinkHandle, name: *const c_char, value: bool) -> c_int;
    pub fn mblink_state_set_int(handle: MBlinkHandle, name: *const c_char, value: i64) -> c_int;
    pub fn mblink_state_set_double(handle: MBlinkHandle, name: *const c_char, value: f64) -> c_int;
    pub fn mblink_state_set_string(
        handle: MBlinkHandle,
        name: *const c_char,
        value: *const c_char,
    ) -> c_int;
    pub fn mblink_state_set_json(
        handle: MBlinkHandle,
        name: *const c_char,
        json: *const c_char,
    ) -> c_int;
    pub fn mblink_state_array_push(
        handle: MBlinkHandle,
        name: *const c_char,
        item_json: *const c_char,
    ) -> c_int;
    pub fn mblink_state_array_push_int(
        handle: MBlinkHandle,
        name: *const c_char,
        value: i64,
    ) -> c_int;
    pub fn mblink_state_array_push_double(
        handle: MBlinkHandle,
        name: *const c_char,
        value: f64,
    ) -> c_int;
    pub fn mblink_state_array_push_string(
        handle: MBlinkHandle,
        name: *const c_char,
        value: *const c_char,
    ) -> c_int;
    pub fn mblink_state_array_push_bool(
        handle: MBlinkHandle,
        name: *const c_char,
        value: bool,
    ) -> c_int;
    pub fn mblink_state_array_pop(handle: MBlinkHandle, name: *const c_char) -> c_int;
    pub fn mblink_state_array_shift(handle: MBlinkHandle, name: *const c_char) -> c_int;
    pub fn mblink_state_array_unshift(
        handle: MBlinkHandle,
        name: *const c_char,
        item_json: *const c_char,
    ) -> c_int;
    pub fn mblink_state_array_remove(
        handle: MBlinkHandle,
        name: *const c_char,
        index: c_int,
    ) -> c_int;
    pub fn mblink_state_array_clear(handle: MBlinkHandle, name: *const c_char) -> c_int;
    pub fn mblink_state_array_set(
        handle: MBlinkHandle,
        name: *const c_char,
        index: c_int,
        item_json: *const c_char,
    ) -> c_int;
    pub fn mblink_state_array_set_int(
        handle: MBlinkHandle,
        name: *const c_char,
        index: c_int,
        value: i64,
    ) -> c_int;
    pub fn mblink_state_array_set_double(
        handle: MBlinkHandle,
        name: *const c_char,
        index: c_int,
        value: f64,
    ) -> c_int;
    pub fn mblink_state_array_set_string(
        handle: MBlinkHandle,
        name: *const c_char,
        index: c_int,
        value: *const c_char,
    ) -> c_int;
    pub fn mblink_state_object_set(
        handle: MBlinkHandle,
        name: *const c_char,
        key: *const c_char,
        value_json: *const c_char,
    ) -> c_int;
    pub fn mblink_state_object_set_int(
        handle: MBlinkHandle,
        name: *const c_char,
        key: *const c_char,
        value: i64,
    ) -> c_int;
    pub fn mblink_state_object_set_double(
        handle: MBlinkHandle,
        name: *const c_char,
        key: *const c_char,
        value: f64,
    ) -> c_int;
    pub fn mblink_state_object_set_string(
        handle: MBlinkHandle,
        name: *const c_char,
        key: *const c_char,
        value: *const c_char,
    ) -> c_int;
    pub fn mblink_state_object_set_bool(
        handle: MBlinkHandle,
        name: *const c_char,
        key: *const c_char,
        value: bool,
    ) -> c_int;
    pub fn mblink_state_object_remove(
        handle: MBlinkHandle,
        name: *const c_char,
        key: *const c_char,
    ) -> c_int;
    pub fn mblink_state_object_clear(handle: MBlinkHandle, name: *const c_char) -> c_int;
    pub fn mblink_state_increment(handle: MBlinkHandle, name: *const c_char, delta: f64) -> c_int;
    pub fn mblink_state_multiply(handle: MBlinkHandle, name: *const c_char, factor: f64) -> c_int;
    pub fn mblink_state_string_append(
        handle: MBlinkHandle,
        name: *const c_char,
        suffix: *const c_char,
    ) -> c_int;
    pub fn mblink_state_string_prepend(
        handle: MBlinkHandle,
        name: *const c_char,
        prefix: *const c_char,
    ) -> c_int;
    pub fn mblink_state_watch(
        handle: MBlinkHandle,
        name: *const c_char,
        callback: MBlinkStateCallback,
        user_data: *mut c_void,
    ) -> c_int;
    pub fn mblink_state_unwatch(handle: MBlinkHandle, watch_id: c_int);
    pub fn mblink_state_batch_begin(handle: MBlinkHandle);
    pub fn mblink_state_batch_end(handle: MBlinkHandle);
    pub fn mblink_state_set_merge_mode(handle: MBlinkHandle, enable: bool);
    pub fn mblink_process_queue(handle: MBlinkHandle) -> c_int;
    pub fn mblink_queue_size(handle: MBlinkHandle) -> c_int;

    pub fn mblink_shared_create(handle: MBlinkHandle, name: *const c_char) -> MBlinkSharedHandle;
    pub fn mblink_shared_destroy(shared: MBlinkSharedHandle);
    pub fn mblink_shared_set_int(shared: MBlinkSharedHandle, key: *const c_char, value: i64)
        -> c_int;
    pub fn mblink_shared_set_double(
        shared: MBlinkSharedHandle,
        key: *const c_char,
        value: f64,
    ) -> c_int;
    pub fn mblink_shared_set_string(
        shared: MBlinkSharedHandle,
        key: *const c_char,
        value: *const c_char,
    ) -> c_int;
    pub fn mblink_shared_set_bool(
        shared: MBlinkSharedHandle,
        key: *const c_char,
        value: bool,
    ) -> c_int;
    pub fn mblink_shared_set_null(shared: MBlinkSharedHandle, key: *const c_char) -> c_int;
    pub fn mblink_shared_set_json(
        shared: MBlinkSharedHandle,
        key: *const c_char,
        json: *const c_char,
    ) -> c_int;
    pub fn mblink_shared_get_int(shared: MBlinkSharedHandle, key: *const c_char) -> i64;
    pub fn mblink_shared_get_double(shared: MBlinkSharedHandle, key: *const c_char) -> f64;
    pub fn mblink_shared_get_string(shared: MBlinkSharedHandle, key: *const c_char) -> *mut c_char;
    pub fn mblink_shared_get_bool(shared: MBlinkSharedHandle, key: *const c_char) -> bool;
    pub fn mblink_shared_get_json(shared: MBlinkSharedHandle, key: *const c_char) -> *mut c_char;
    pub fn mblink_shared_get_type(shared: MBlinkSharedHandle, key: *const c_char) -> c_int;
    pub fn mblink_shared_delete(shared: MBlinkSharedHandle, key: *const c_char) -> c_int;
    pub fn mblink_shared_has(shared: MBlinkSharedHandle, key: *const c_char) -> bool;
    pub fn mblink_shared_batch_begin(shared: MBlinkSharedHandle);
    pub fn mblink_shared_batch_end(shared: MBlinkSharedHandle);

    pub fn mblink_logview_get(handle: MBlinkHandle, element_id: *const c_char) -> MBlinkLogViewHandle;
    pub fn mblink_logview_destroy(logview: MBlinkLogViewHandle);
    pub fn mblink_logview_append(
        logview: MBlinkLogViewHandle,
        level: *const c_char,
        source: *const c_char,
        message: *const c_char,
    ) -> c_int;
    pub fn mblink_logview_clear(logview: MBlinkLogViewHandle);
    pub fn mblink_logview_export(logview: MBlinkLogViewHandle, format: *const c_char) -> *mut c_char;

    pub fn mblink_terminal_get(
        handle: MBlinkHandle,
        element_id: *const c_char,
    ) -> MBlinkTerminalHandle;
    pub fn mblink_terminal_destroy(terminal: MBlinkTerminalHandle);
    pub fn mblink_terminal_write(terminal: MBlinkTerminalHandle, data: *const c_char) -> c_int;
    pub fn mblink_terminal_clear(terminal: MBlinkTerminalHandle);
    pub fn mblink_terminal_execute(terminal: MBlinkTerminalHandle, command: *const c_char) -> c_int;
    pub fn mblink_terminal_start_shell(terminal: MBlinkTerminalHandle, shell: *const c_char)
        -> c_int;
    pub fn mblink_terminal_send_input(terminal: MBlinkTerminalHandle, input: *const c_char) -> c_int;
    pub fn mblink_terminal_resize(terminal: MBlinkTerminalHandle, rows: c_int, cols: c_int);
    pub fn mblink_terminal_serialize(terminal: MBlinkTerminalHandle) -> *mut c_char;

    pub fn mblink_copy_string(str_: *const c_char) -> *mut c_char;
    pub fn mblink_free(ptr: *mut c_void);
}

#[cfg(not(all(target_os = "windows", mblink_runtime_load)))]
struct DevtoolsApi {
    _lib: libloading::Library,
    mblink_devtools_open: unsafe extern "C" fn(MBlinkHandle) -> c_int,
    mblink_devtools_close: unsafe extern "C" fn(MBlinkHandle) -> c_int,
    mblink_devtools_default_http_options: unsafe extern "C" fn() -> MBlinkDevToolsHttpOptions,
    mblink_devtools_http_start: unsafe extern "C" fn(
        MBlinkHandle,
        *const MBlinkDevToolsHttpOptions,
        *mut MBlinkDevToolsHttpInfo,
    ) -> c_int,
    mblink_devtools_http_stop: unsafe extern "C" fn(MBlinkHandle) -> c_int,
    mblink_devtools_http_info_free: unsafe extern "C" fn(*mut MBlinkDevToolsHttpInfo),
    mblink_ui_dev_default_snapshot_options: unsafe extern "C" fn() -> MBlinkUiDevSnapshotOptions,
    mblink_ui_dev_snapshot_json: unsafe extern "C" fn(
        MBlinkHandle,
        *const MBlinkUiDevSnapshotOptions,
        *mut *mut c_char,
    ) -> c_int,
    mblink_ui_dev_snapshot_file:
        unsafe extern "C" fn(MBlinkHandle, *const c_char, *const MBlinkUiDevSnapshotOptions) -> c_int,
    mblink_ui_dev_command_json:
        unsafe extern "C" fn(MBlinkHandle, *const c_char, *mut *mut c_char) -> c_int,
}

#[cfg(not(all(target_os = "windows", mblink_runtime_load)))]
static DEVTOOLS_API: OnceLock<DevtoolsApi> = OnceLock::new();

#[cfg(not(all(target_os = "windows", mblink_runtime_load)))]
fn devtools_api() -> &'static DevtoolsApi {
    DEVTOOLS_API.get_or_init(|| unsafe { load_devtools_api() })
}

#[cfg(not(all(target_os = "windows", mblink_runtime_load)))]
unsafe fn load_devtools_api() -> DevtoolsApi {
    let path = devtools_library_path();
    let lib = libloading::Library::new(&path).unwrap_or_else(|err| {
        panic!(
            "failed to load mblink_devtools dynamic library at {}: {err}",
            path.display()
        )
    });

    macro_rules! load {
        ($name:literal, $ty:ty) => {{
            *lib.get::<$ty>($name).unwrap_or_else(|err| {
                panic!(
                    "failed to load symbol {} from {}: {err}",
                    String::from_utf8_lossy($name),
                    path.display()
                )
            })
        }};
    }
